[project]
name = "warporacer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "gymnasium>=1.2.3",
    "imageio[ffmpeg]>=2.37.3",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "pyyaml>=6.0.3",
    "scikit-image>=0.26.0",
    "scipy>=1.17.1",
    "skrl>=2.0.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.7.0",
    "typer>=0.24.1",
    "wandb>=0.26.0",
    "warp-lang>=1.12.1",
    "warp-nn>=0.1.0",
    "flash-attn",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu130" }]
torchvision = [{ index = "pytorch-cu130" }]
flash-attn = { url = "https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.9.4/flash_attn-2.8.3+cu130torch2.11-cp312-cp312-linux_x86_64.whl" }

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
